--- a/Css/Style_Info.css
+++ b/Css/Style_Info.css
@@ -1,4 +1,4 @@
-body{background-image: url("image/");
+body{background-image: url("image/Info_Cover.png");
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
