--- a/Css/Style_Info.css
+++ b/Css/Style_Info.css
@@ -1,7 +1,48 @@
+*{
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    transition: .2s linear;
+    font-family: "poppins",sans-serif;
+
+}
+html
+{
+    font-size: 10px;;
+}
 body{background-image: url("../image/Info_Cover.png");
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-position: center;
-background-size: cover;
-position: relative;
-text-align: center;}
+    background-position: 0 1000px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    text-align: center;
+}
+.conatiner{
+    display: grid;
+    gap: 15px;
+    max-width:1100px ;
+    margin: 0 auto;
+    padding: 0 3rem;
+    text-align: center;
+}
+h1
+{
+    font-size: 5rem;
+    font-weight: 700;
+    letter-spacing: 8px;
+    margin-bottom: 2rem;
+}
+.im{
+margin-top: 10rem;
+margin-bottom:5rem;
+width: 5px;
+height: 10px;
+}
+h2{
+    font-size: 4rem;
+    font-weight:400;
+
+
+}
