--- a/Css/Style_Info.css
+++ b/Css/Style_Info.css
@@ -2,29 +2,28 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
-    transition: .2s linear;
-    font-family: "poppins",sans-serif;
 
 }
 html
 {
-    font-size: 10px;;
+    font-size: 10px;
 }
 body{background-image: url("../image/Info_Cover.png");
-    background-position: 0 1000px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
     position: relative;
     text-align: center;
+    background-position: 0;
+
 }
 .conatiner{
-    display: grid;
-    gap: 15px;
+
     max-width:1100px ;
     margin: 0 auto;
     padding: 0 3rem;
+    margin-top: 4rem;
     text-align: center;
 }
 h1
@@ -37,12 +36,16 @@ h1
 .im{
 margin-top: 10rem;
 margin-bottom:5rem;
-width: 5px;
-height: 10px;
+
 }
 h2{
     font-size: 4rem;
     font-weight:400;
 
 
+}
+p{
+    font-size: 2rem;
+    line-height: 5rem;
+    margin-bottom: 5rem;
 }
