--- a/Css/Style_Info.css
+++ b/Css/Style_Info.css
@@ -5,13 +5,15 @@
 
 }
 
-body{background-image: url("../image/Info_Cover.png");
+body{
+    background-image: url("../image/Info_Cover.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
     position: relative;
     text-align: center;
+    height: ;
     background-position: 0;
 
 }
